Bug 1916350 - [devtools] Don't add checked class on experimental toolbar icon to indicate some prefs are enabled. r=devtools-reviewers,ochameau.
This doesn't look great in High Contrast Mode.
Add the small callout icon instead.

Differential Revision: https://phabricator.services.mozilla.com/D228944

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -483,7 +483,10 @@ iframe {
   list-style-image: url("chrome://devtools/skin/images/settings.svg");
 }
 
-.devtools-button.devtools-feature-callout::after {
+:is(
+  .devtools-button,
+  .devtools-tabbar-button
+).devtools-feature-callout::after {
   content: url("chrome://global/skin/icons/badge-blue.svg");
   width: 14px;
   height: 14px;
